--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -2,8 +2,8 @@ HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
-!**/src/main/**/application.properties
 !**/src/test/**/target/
+src/main/resources/application.properties
 
 ### STS ###
 .apt_generated
