--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.datasource.url= jdbc:postgresql://localhost:5555/lavender_movies
 spring.datasource.username=postgres
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
