--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+jwt.secret=wbT1iTL%5Pw3T0@rKzF
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
