--- a/backend-3/src/main/resources/application.properties
+++ b/backend-3/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+spring.datasource.url= jdbc:postgresql://localhost:5555/lavender_movies_3
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.show-sql=true
+spring.jpa.hibernate.properties.hibernate.format_sql=true
+spring.jpa.hibernate.properties.database=postgresql
+spring.jpa.hibernate.properties.database-platform=org.hibernate.dialect.PostgreSQLDialect
