--- a/backend-spring-3/src/main/resources/application.properties
+++ b/backend-spring-3/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url= jdbc:postgresql://localhost:5555/lavender_movies_3
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:mysql://localhost:3306/lavender_movies
+spring.datasource.username=root
+spring.datasource.password=mysqlpasswd
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.show-sql=true
 spring.jpa.hibernate.properties.hibernate.format_sql=true
-spring.jpa.hibernate.properties.database=postgresql
-spring.jpa.hibernate.properties.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.properties.database=mysql
+spring.jpa.hibernate.properties.database-platform=org.hibernate.dialect.MySQLDialect
